# balerion-alpha

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  pyproject.toml  skills-lock.json
.agents/skills/vectorbt-expert/: SKILL.md
experiments/: STRATEGY_BACKTEST_PATTERN.md  VECTORBT_FX_SIZING.md
experiments/BbandsMR/: backtest.py  strategy.py  tradinglogic.md
experiments/RangeBO/: backtest.py  live.py  strategy.py  tradinglogic.md
experiments/TrendBO/: backtest.py  live.py  strategy.py  tradinglogic.md
experiments/Unicorn-ICT/: CLAUDE.md  backtest.py  strategy.py  tradinglogic.md
experiments/Unicorn-ICT/reports/: run_log.txt  unicorn_ict_EURUSD_backtest_report.txt  unicorn_ict_EURUSD_trades.csv
experiments/silver-bullet/: README.md  _check_results.py  _smoke_test.py  backtest.py  live.py  optimize.py  optimize_phase2.py  strategy.py  tradinglogic.md
experiments/sma_crossover/: README.md  strategy.py
reports/: README.md
src/balerion_alpha/: __init__.py
utils/: __init__.py  backtest_charts.py  data_loader.py  plotting.py
